force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>Asset &amp; Equipment Lifecycle Management App - Represents a physical asset or equipment item.</description>
    <label>Asset</label>
    <nameField>
        <displayFormat>Asset-{000000}</displayFormat>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>