force-app/main/default/objects/Asset__c/fields/AssetCode__c.field-meta.xml
<CustomField>
    <fullName>AssetCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Asset Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>