force-app/main/default/objects/Asset__c/fields/Condition_Score__c.field-meta.xml
<CustomField>
    <fullName>Condition_Score__c</fullName>
    <label>Condition Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>