force-app/main/default/objects/Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZenCore X14 Pro</fullName>
            </value>
            <value>
                <fullName>NovaTech EdgeBook S9</fullName>
            </value>
            <value>
                <fullName>ByteWave Atlas 515</fullName>
            </value>
            <value>
                <fullName>TerraLink Fusion X200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>