force-app/main/default/objects/Asset__c/fields/Next_Maintenance_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Maintenance Due</label>
    <type>Date</type>
</CustomField>