force-app/main/default/objects/Asset__c/listViews/Assets.listView-meta.xml
<ListView>
    <fullName>Assets</fullName>
    <columns>NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Employee__c</columns>
    <columns>Condition_Score__c</columns>
    <columns>Next_Maintenance_Due__c</columns>
    <columns>Model__c</columns>
    <filterScope>Mine</filterScope>
    <label>Assets</label>
</ListView>